# sundayalbum-claude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PHASE_1_SUMMARY.md  README.md  pyproject.toml  requirements-lambda.txt  requirements-runtime.txt  requirements.txt
.githooks/: pre-commit
.github/: CODEOWNERS
api/: __init__.py  auth.py  broadcaster.py  common.py  jobs.py  settings.py  websocket.py
docs/: CONTRIBUTING.md  DEVELOPMENT_JOURNAL.md  Implementation_Album_Digitizer.md  MACOS_APP_PLAN.md  PHASED_PLAN_Claude_Code.md  PIPELINE_STEPS.md  README.md  SYSTEM_ARCHITECTURE.md  UI_Design_Album_Digitizer.md  WEB_UI_PLAN.md  WEB_UI_PLAN_Part1.md  WEB_UI_PLAN_Part2.md  WEB_UI_PLAN_Part3.md  WEB_UI_PLAN_Part4.md
handlers/: __init__.py  ai_orient.py  color_restore.py  common.py  finalize.py  geometry.py  glare_remove.py  load.py  normalize.py  page_detect.py  perspective.py  photo_detect.py  photo_split.py
infra/: .gitignore  app.py  cdk.json  ses-sundayalbum-dns-changes.json
journal/: 2026-02-10-phase-1-project-setup.md  2026-02-16-phase-7-geometry-correction.md  2026-02-16-phase-8-color-restoration.md  2026-02-16-phase-9-pipeline-integration.md  2026-02-16-single-print-fix.md  2026-02-17-multi-photo-detection-fix.md  2026-02-18-openai-glare-and-orientation.md  2026-02-19-rotation-fix.md  2026-02-20-color-restoration-fix.md  2026-03-04-photo-boundary-detection-fix-and-background-stripping.md  2026-04-09-color-restore-rethink.md  2026-04-09-dev-branch-strategy.md  2026-04-10-public-website-plan.md  2026-04-10-public-website.md  INDEX.md  (+8 more)
(+184 files in other folders)
