[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sundayalbum"
version = "0.1.0"
description = "Sunday Album - Free tool to digitize physical photo album pages into clean individual digital photos"
readme = "CLAUDE.md"
requires-python = ">=3.11"
authors = [
    {name = "Sunday Album Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "rawpy>=0.18.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "anthropic>=0.34.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
sundayalbum = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["rawpy.*", "pillow_heif.*", "cv2.*", "skimage.*"]
ignore_missing_imports = true
